# honeytrap

./: .editorconfig  .env.example  .gitattributes  .gitignore  BUILD_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml   DEVELOPMENT.md  DOCUMENTATION.md  ML_GUIDE.md  Makefile  README.md  UI_GUIDE.md  config.toml  model.json  rl_agent_model.json
.github/workflows/: ci.yml  docker.yml  release.yml
config/: honeytrap.toml
crates/honeytrap-ai/: Cargo.toml
crates/honeytrap-ai/examples/: python_scripting.rs  rhai_scripting.rs  rl_training.rs  train_model.rs
crates/honeytrap-ai/src/: anomaly_detector.rs  features.rs  lib.rs  llm.rs  random_forest.rs  rl_agent.rs
crates/honeytrap-ai/src/scripting/: mod.rs  python.rs  rhai_engine.rs
crates/honeytrap-cli/: Cargo.toml
crates/honeytrap-cli/src/: main.rs
crates/honeytrap-core/: Cargo.toml
crates/honeytrap-core/src/: config.rs  lib.rs  router.rs  session.rs
crates/honeytrap-deception/: Cargo.toml
crates/honeytrap-deception/examples/: advanced_interactions.rs
crates/honeytrap-deception/src/: deception_system.rs  lib.rs
crates/honeytrap-deception/src/honeypots/: http.rs  mod.rs  mysql.rs  ssh.rs
crates/honeytrap-deception/src/interactions/: command_parser.rs  fake_filesystem.rs  http_interaction.rs  mod.rs  mysql_interaction.rs  response_generator.rs  ssh_interaction.rs
crates/honeytrap-metrics/: Cargo.toml
crates/honeytrap-metrics/examples/: metrics_demo.rs
crates/honeytrap-metrics/src/: collectors.rs  exporter.rs  lib.rs  registry.rs
crates/honeytrap-policy/: Cargo.toml
crates/honeytrap-policy/src/: engine.rs  lib.rs  loader.rs  model.rs
crates/honeytrap-protocol/: Cargo.toml
crates/honeytrap-protocol/examples/: quic_client.rs  quic_server.rs
crates/honeytrap-protocol/src/: lib.rs  quic.rs  stream.rs
crates/honeytrap-scripting/: Cargo.toml
crates/honeytrap-scripting/examples/: python_scripting.rs  rhai_scripting.rs
crates/honeytrap-scripting/src/: lib.rs  python.rs  rhai_engine.rs
crates/honeytrap-server/: .dockerignore  Cargo.rs  Cargo.toml  Dockerfile  README.md  docker-compose.yml  honeytrap.example.toml  honeytrap.service  install.sh  k8s-deployment.yaml
crates/honeytrap-server/src/: main.rs
docker/: .dockerignore  CHANGELOG.md  Dockerfile.alpine  Dockerfile.cli  Dockerfile.dev  Dockerfile.server  Dockerfile.test  MIGRATION.md  README.md  docker-compose.dev.yml  docker-compose.yml  prometheus.yml
docs/: QUIC_INTEGRATION.md
grafana/: README.md  honeytrap-dashboard.json
honeytrap-chart/: Chart.yaml  values.yaml
honeytrap-chart/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret-ai.yaml  service.yaml
mobile-app/: .gitignore  README.md  app.json  package.json
mobile-app/app/: _layout.tsx
mobile-app/app/(tabs)/: _layout.tsx  connections.tsx  index.tsx  ml.tsx  sessions.tsx
mobile-app/src/api/: client.ts
policies/: base-policies.yaml  high-risk.yaml
scripts/: pre-commit.sh  setup-dev.sh
web-ui/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/api/: client.ts
web-ui/src/components/: Layout.tsx
web-ui/src/pages/: Connections.tsx  Dashboard.tsx  MLMetrics.tsx  Sessions.tsx
