[workspace]
members = [
    "crates/honeytrap-core",
    "crates/honeytrap-ai",
    "crates/honeytrap-deception",
    "crates/honeytrap-protocol",
    "crates/honeytrap-scripting",
    "crates/honeytrap-cli",
    "crates/honeytrap-server",
    "crates/honeytrap-metrics",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Anton Feldmann"]
license = "MIT"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# QUIC (neueste Version)
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"

# Machine Learning
smartcore = "0.3"
ndarray = "0.16"

# Scripting
rhai = "1.20"
pyo3 = { version = "0.22", features = ["auto-initialize"] }

# HTTP Client for LLM APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
