[package]
name = "honeytrap-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
reqwest.workspace = true
serde_json = "1.0"

# ML Dependencies für RandomForest
smartcore.workspace = true
ndarray.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[[example]]
name = "train_model"
path = "examples/train_model.rs"

[lib]
name = "honeytrap_ai"
path = "src/lib.rs"
