[package]
name = "honeytrap-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
reqwest.workspace = true
serde_json = "1.0"

# ML Dependencies für RandomForest
smartcore.workspace = true
ndarray.workspace = true

# Scripting
rhai.workspace = true
pyo3.workspace = true
async-trait.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[[example]]
name = "train_model"
path = "examples/train_model.rs"

[[example]]
name = "rhai_scripting"
path = "examples/rhai_scripting.rs"

[[example]]
name = "python_scripting"
path = "examples/python_scripting.rs"

[lib]
name = "honeytrap_ai"
path = "src/lib.rs"
