[package]
name = "honeytrap-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
reqwest.workspace = true
serde_json = "1.0"
rand = "0.8"

# ML Dependencies für RandomForest
smartcore.workspace = true
ndarray.workspace = true

# Scripting
honeytrap-scripting = { path = "../honeytrap-scripting" }

[dev-dependencies]
tracing-subscriber.workspace = true

[[example]]
name = "train_model"
path = "examples/train_model.rs"

[[example]]
name = "rl_training"
path = "examples/rl_training.rs"

[lib]
name = "honeytrap_ai"
path = "src/lib.rs"
