[package]
name = "honeytrap-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
honeytrap-core = { path = "../honeytrap-core" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
toml.workspace = true

[[bin]]
name = "honeytrap"
path = "src/main.rs"
