[package]
name = "honeytrap-deception"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json = "1.0"
urlencoding = "2.1"

# Optional QUIC support
quinn = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true

[[example]]
name = "advanced_interactions"
path = "examples/advanced_interactions.rs"

[features]
default = ["quic"]
quic = ["dep:quinn"]

[lib]
name = "honeytrap_deception"
path = "src/lib.rs"
