[package]
name = "honeytrap-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
prometheus.workspace = true
lazy_static.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
rand = "0.8"

[[example]]
name = "metrics_demo"
path = "examples/metrics_demo.rs"

[lib]
name = "honeytrap_metrics"
path = "src/lib.rs"
