[package]
name = "honeytrap-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
honeytrap-deception = { path = "../honeytrap-deception", features = ["quic"] }

tokio.workspace = true
tracing.workspace = true

# QUIC Dependencies
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[features]
default = ["quic"]
quic = ["honeytrap-deception/quic"]

[[example]]
name = "quic_server"
path = "examples/quic_server.rs"

[[example]]
name = "quic_client"
path = "examples/quic_client.rs"

[lib]
name = "honeytrap_protocol"
path = "src/lib.rs"
