[package]
name = "honeytrap-scripting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json = "1.0"

# Scripting
rhai.workspace = true
pyo3.workspace = true

# Logging
tracing.workspace = true

[lib]
name = "honeytrap_scripting"
path = "src/lib.rs"
