[package]
name = "honeytrap-scripting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json = "1.0"

# Scripting
rhai.workspace = true
pyo3.workspace = true

# Logging
tracing.workspace = true

[[example]]
name = "rhai_scripting"
path = "examples/rhai_scripting.rs"

[[example]]
name = "python_scripting"
path = "examples/python_scripting.rs"

[lib]
name = "honeytrap_scripting"
path = "src/lib.rs"
