[package]
name = "honeytrap-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "honeytrap-server"
path = "src/main.rs"

[dependencies]
# Workspace Dependencies
honeytrap-core = { path = "../honeytrap-core" }
honeytrap-ai = { path = "../honeytrap-ai" }
honeytrap-deception = { path = "../honeytrap-deception" }
honeytrap-protocol = { path = "../honeytrap-protocol" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true

# Additional dependencies
anyhow = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"
